[package]
name = "os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
buddy_system_allocator = "0.9.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
log = "0.4.17"
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }


[profile.release]
debug = true
